[workspace]
members = [
    "database",
    "common",
    "backend",
    "frontend",
    "apiprovider",
    "frontend-core",
    "components",
    "yew-toastrack",
    "yew-bulma-tabs",
    "yew-markdown",
    "puzzleutils",
]

[patch.crates-io]
gloo-history = { git = "https://github.com/kinnison/gloo", branch = "fix-284" }
bounce = { git = "https://github.com/kinnison/bounce", branch = "fix-62" }
