[workspace]
members = [
    "database",
    "common",
    "backend",
    "frontend",
    "apiprovider",
    "frontend-core",
    "components",
    "yew-toastrack",
    "yew-bulma-tabs",
    "yew-markdown",
    "puzzleutils",
    "yew-paginator",
    "tutorials",
]

[patch.crates-io]
bounce = { git = "https://github.com/bounce-rs/bounce", branch = "master" }
