[package]
name = "apiprovider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
yew = "0.20"
reqwest = { version = "0.11", features = ["json"] }
frontend-core = { path = "../frontend-core" }
common = { path = "../common" }
url = "2.3.1"
gloo = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
bounce = { version = "0.6", features = ["query"] }
[features]
ssr = ["yew/ssr", "bounce/ssr"]
csr = ["yew/csr"]
