[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["http2", "macros"] }
common = { version = "0.1.0", path = "../common", features = ["backend"] }
config = "0.13.3"
cookie = "0.16.2"
database = { version = "0.1.0", path = "../database" }
frontend = { path = "../frontend", features = ["ssr"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
md5 = "0.7.0"
openidconnect = "2.4.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4"
tower-cookies = { version = "0.8.0", features = ["private"] }
tower-http = { version = "0.3.5", features = [
    "fs",
    "trace",
    "compression-full",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
yew = { version = "0.20.0", features = ["ssr"] }
bounce = { version = "0.6", features = ["helmet", "ssr"] }
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
git-testament = "0.2"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
puzzleutils = { path = "../puzzleutils" }
sentry = { version = "0.29.2", default-features = false, features = [
    "rustls",
    "reqwest",
    "backtrace",
    "contexts",
    "panic",
    "tower",
    "tower-http",
    "tracing",
] }

[features]
default = ["migrations"]
migrations = ["database/migrations"]
