[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
git-testament = "0.2"
md5 = "0.7"
axum = { version = "*", optional = true }

[features]
backend = ["dep:axum"]
