[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"
frontend-core = { path = "../frontend-core" }
apiprovider = { path = "../apiprovider" }
common = { path = "../common" }
log = "0.4.17"
gloo = "0.8.0"
stylist = { version = "0.11", features = ["yew_integration"] }
yew-toastrack = { path = "../yew-toastrack" }
