[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"
frontend-core = { path = "../frontend-core" }
apiprovider = { path = "../apiprovider" }
common = { path = "../common" }
tracing = { version = "0.1.37", features = ["log"] }
gloo = "0.8.0"
stylist = { version = "0.11", features = ["yew_integration"] }
yew-toastrack = { path = "../yew-toastrack" }
git-testament = "0.2"
futures-util = "0.3"
bounce = { version = "0.6", features = ["helmet"] }
