[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"
frontend-core = { path = "../frontend-core" }
apiprovider = { path = "../apiprovider" }
common = { path = "../common" }
tracing = { version = "0.1.37", features = ["log"] }
gloo = "0.8.0"
gloo-utils = { version = "*", features = ["serde"] }
stylist = { version = "0.12", features = ["yew_integration"] }
yew-toastrack = { path = "../yew-toastrack" }
yew-markdown = { path = "../yew-markdown" }
git-testament = "0.2"
futures-util = "0.3"
bounce = { version = "0.6.1", features = ["helmet"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
web-sys = { version = "0.3.60", features = ["Navigator", "HtmlDivElement"] }
js-sys = "0.3"
wasm-bindgen = "0.2.83"
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
