[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres"] }
diesel-async = { version = "0.2.0", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
