[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
axum = { version = "0.6.1", default-features = false }
diesel = { version = "2.0.2", features = ["postgres"] }
diesel-async = { version = "0.2.0", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
md5 = "0.7.0"
serde = { version = "1.0.151", features = ["derive"] }
common = { path = "../common" }
