[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
axum = { version = "0.6.1", default-features = false }
diesel = { version = "2.0.2", features = ["postgres_backend", "time"] }
diesel-async = { version = "0.2.0", features = ["postgres", "bb8"] }
diesel_migrations = { optional = true, version = "2.0.0", features = [
    "postgres",
] }
md5 = "0.7.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1"
common = { path = "../common" }
time = { version = "0.3", features = ["formatting"] }
futures = "0.3"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.9"
rustls = "0.20"
tokio = "1"
bb8 = "0.8"
tracing = "*"
rand = "0.8"
lazy_static = "1.4"
webpki-roots = "0.22.6"

[features]
migrations = ["diesel/postgres", "dep:diesel_migrations"]
