[package]
name = "frontend-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.60"
url = "2.3.1"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlLinkElement"] }
yew = "0.20.0"
yew-router = "0.17.0"
yew-hooks = "0.2"
yew-toastrack = { path = "../yew-toastrack" }
common = { path = "../common" }
bounce = { version = "0.6", features = ["helmet"] }
git-testament = "0.2"

[features]
ssr = ["yew/ssr"]
csr = ["yew/hydration"]
