[package]
name = "puzzleutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz-str = { git = "https://github.com/dclamage/lz-str-rs" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
url = "2.3.1"
