[package]
name = "puzzleutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz-str = { git = "https://github.com/dclamage/lz-str-rs" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = "2.3.1"
yew-markdown = { path = "../yew-markdown" }
common = { path = "../common" }
yew = "0.20"
regex = "1.7"
