[package]
name = "yew-toastrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
gloo = "0.8"
stylist = { version = "0.11", features = ["yew_integration"] }
serde = { version = "1", features = ["derive"] }
